// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic 1`] = `
<div
  className="sc-bdnxRM feraXx"
>
  Facebook
</div>
`;

exports[`Flex with gaps 1`] = `
<div
  className="sc-bdnxRM cOKwbR"
>
  Facebook
</div>
`;
